--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -71,6 +71,7 @@
                                         value="{{choice.id}}">{{ choice.choice }}
                                 </label>
                             </div>
+                            {% endfor %}
                         </div>
                         {% endfor %}
                         {% endfor %}
